Fixed mobile view of images in about and article pages. Changes the alignment of the grid and header.

--- a/about/css/style.css
+++ b/about/css/style.css
@@ -9,5 +9,6 @@
 	display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
+    padding: 15px;
 }
