--- a/resources/directives/story-card/css/style.css
+++ b/resources/directives/story-card/css/style.css
@@ -3,7 +3,6 @@
 	height: 330px;
 	border-radius: 15px;
 	background-color: #ffffff;
-	padding: 5px 10px;
 	margin-bottom: 20px;
     opacity: 0.5;
 	overflow: hidden;
@@ -19,7 +18,7 @@
 }
 
 .story-card img {
-	width: 310px;
+	width: 100%;
 	position: relative;
 
     transition-duration: 0.8s;
@@ -27,6 +26,7 @@
 
 .story-card-content{
 	height: 300px;
+	padding: 5px 10px;
 	-webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 
 	transition-duration: 0.8s;
@@ -45,6 +45,7 @@
     height: 30px;
     bottom: 0;
     position: relative;
+	padding: 5px 10px;
     background-color: rgba(51, 51, 51, 0.9);
     color: rgb(210, 210, 210);
 
@@ -57,6 +58,5 @@
 
 .story-card-caption {
 	height: 30px;
-	text-align: center;
     font-size: 10px;
 }
